first structure landingpage

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
     <title>MarkUp</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- HEADER COMPONENT -->
+    <div class="container-fluid header">
+      <h2>logo y texto</h2>
+    </div>
 
+    <!-- ABOUT COMPONENT -->
+    <div class="container-fluid about">
+      <h2>Quienes somos</h2>
+    </div>
+
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+
+    <!-- FOOTER COMPONENT -->
+    <div class="container-fluid footer">
+      <h2>contacto e iconos</h2>
+    </div>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./bootstrap/js/bootstrap.min.js" ></script>
