adding some components to the html structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
   <body>
     <!-- HEADER COMPONENT -->
     <div class="container-fluid header">
-      <h2>logo y texto</h2>
+
+      <!-- nav, logo, should be fixed and have links to another components(about, services) -->
+      <div class="container-fluid nav-logo">
+        <h2>logo</h2>
+      </div>
+
+      <!-- header main content -->
+      <div class="container-fluid header-main">
+        <h2>Imagen y texto</h2>
+      </div>
     </div>
 
     <!-- ABOUT COMPONENT -->
@@ -30,7 +39,7 @@
     <div class="container-fluid footer">
       <h2>contacto e iconos</h2>
     </div>
-    
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./bootstrap/js/bootstrap.min.js" ></script>
