header and nav progress

--- a/index.html
+++ b/index.html
@@ -7,21 +7,30 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
     <title>MarkUp</title>
   </head>
   <body>
+
+    <!-- nav, logo, should be fixed and have links to another components(about, services) -->
+    <nav class="navbar markup-nav">
+      <a class="navbar-brand" href="#">
+        <img src="./img/logo1.png" alt="" class="markup-nav-logo">
+      </a>
+    </nav>
+
+    <!-- HEADER COMPONENT -->
+    <header class="markup-header">
+
+    </header>
+
     <!-- HEADER COMPONENT -->
     <div class="container-fluid header">
-
-      <!-- nav, logo, should be fixed and have links to another components(about, services) -->
-      <div class="container-fluid nav-logo">
-        <h2>logo</h2>
-      </div>
-
       <!-- header main content -->
+      <img src="./img/header.jpg" width="200"  alt="">
       <div class="container-fluid header-main">
-        <h2>Imagen y texto</h2>
+        <img src="./img/header.jpg" width="200"  alt="">
       </div>
     </div>
 
@@ -30,6 +39,59 @@
       <h2>Quienes somos</h2>
     </div>
 
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
+    <!-- SERVICES COMPONENT -->
+    <div class="container-fluid services">
+      <h2>Nuestros Servicios</h2>
+    </div>
     <!-- SERVICES COMPONENT -->
     <div class="container-fluid services">
       <h2>Nuestros Servicios</h2>
