--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -14,92 +14,79 @@
   <body>
 
     <!-- nav, logo, should be fixed and have links to another components(about, services) -->
-    <nav class="navbar markup-nav">
+    <!-- <nav class="navbar markup-nav">
       <a class="navbar-brand" href="#">
         <img src="./img/logo1.png" alt="" class="markup-nav-logo">
       </a>
-    </nav>
+    </nav> -->
 
     <!-- HEADER COMPONENT -->
-    <header class="markup-header">
-
+    <header>
+      <img src="./img/logo1.png" class="markup-header-logo">
     </header>
 
-    <!-- HEADER COMPONENT -->
-    <div class="container-fluid header">
-      <!-- header main content -->
-      <img src="./img/header.jpg" width="200"  alt="">
-      <div class="container-fluid header-main">
-        <img src="./img/header.jpg" width="200"  alt="">
+    <div class="markup-header">
+      
+    </div>
+
+    <!-- CONTAINER COMPONENT -->
+    <div class="container-component">
+
+      <!-- IMG COMPONENT -->
+      <div class="img-component">
+        <img src="./img/logo3.png" class="img-fluid">
       </div>
-    </div>
 
-    <!-- ABOUT COMPONENT -->
-    <div class="container-fluid about">
-      <h2>Quienes somos</h2>
-    </div>
+      <!-- LINE COMPONENT -->
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 line-component">
+          <div class="line"></div>
+        </div>
+      </div>
 
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
+      <!-- TITLE COMPONENT -->
+      <div class="title-component">
+        <h1 class="h1-component">QUIÉNES SOMOS</h1>
+      </div>
 
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
-    <!-- SERVICES COMPONENT -->
-    <div class="container-fluid services">
-      <h2>Nuestros Servicios</h2>
-    </div>
+      <!-- ABOUT COMPONENT -->
+      <div class="row about-component">
 
-    <!-- FOOTER COMPONENT -->
-    <div class="container-fluid footer">
-      <h2>contacto e iconos</h2>
+        <!-- SOCIO COMPONENT -->
+        <div class="col-xs-12 col-sm-6 col-md-6 socio-component-jose">
+          <p class="title-text">JOSÉ PLATA PUYANA</p>
+          <p class="socio-text-rol">SOCIO</p><br>
+          <p class="socio-text-description">
+            Abogado Javeriano y del Estado de Nueva York. Maestría en Economía (Univ. Pompeu Fabra) y en Derecho (Univ. Georgetown) con enfoque enenergía y competencia.<br>Ex Superintendente Delegado para Energía y Gas.
+          </p><br>
+          <span class="socio-text-contact">jplata@markup.com.co</span><br>
+          <span class="socio-text-contact">+57 315 928 3820</span>
+        </div>
+
+        <!-- SOCIO COMPONENT -->
+        <div class="col-xs-12 col-sm-6 col-md-6 socio-component-rodrigo">
+          <p class="title-text">RODRIGO CASTELLANO</p>
+          <p class="socio-text-rol">SOCIO</p><br>
+          <p class="socio-text-description">
+            Ingeniero Industrial especialista en finanzas. Miembro de Junta Directiva de Seguros de vida Aurora S.A.<br>Ex Gerente de Derivex.
+          </p><br>
+          <span class="socio-text-contact">rcastellanos@markup.com.co</span><br>
+          <span class="socio-text-contact">+57 314 360 9883</span>
+        </div>
+      </div>
+
+      <!-- LINE COMPONENT -->
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 line-component">
+          <div class="line"></div>
+        </div>
+      </div>
+
+      <!-- TITLE COMPONENT -->
+      <div class="title-component">
+        <h1 class="h1-component">NUESTROS SERVICIOS</h1>
+      </div>
+
     </div>
 
     <!-- Optional JavaScript -->
