--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="row about-component">
 
         <!-- SOCIO COMPONENT -->
-        <div class="col-xs-12 col-sm-6 col-md-6 socio-component-jose">
+        <div class="col-xs-12 col-sm-12 col-md-6 socio-component-jose">
           <p class="title-text">JOSÉ PLATA PUYANA</p>
           <p class="socio-text-rol">SOCIO</p><br>
           <p class="socio-text-description">
@@ -64,7 +64,7 @@
         </div>
 
         <!-- SOCIO COMPONENT -->
-        <div class="col-xs-12 col-sm-6 col-md-6 socio-component-rodrigo">
+        <div class="col-xs-12 col-sm-12 col-md-6 socio-component-rodrigo">
           <p class="title-text">RODRIGO CASTELLANO</p>
           <p class="socio-text-rol">SOCIO</p><br>
           <p class="socio-text-description">
@@ -87,7 +87,50 @@
         <h1 class="h1-component">NUESTROS SERVICIOS</h1>
       </div>
 
+      <!-- SERVICES COMPONENT -->
+      <div class="row services-component">
+        <div class="col-xs-12 col-sm-12 col-md-4 container-services">
+          <center><p class="title-text">ENERGÍA</p></center><br>
+          <span class="services-text">Asesoría regulatoria</span><br>
+          <span class="services-text">Desarrollo de proyectos renovables</span><br>
+          <span class="services-text">Monitoreo de mercados</span>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 container-services">
+          <center><p class="title-text">FINANZAS</p></center><br>
+          <span class="services-text">Evaluación de proyectos</span><br>
+          <span class="services-text">Gestión de riesgos</span><br>
+          <span class="services-text">Gestión comercial</span>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 container-services">
+          <center><p class="title-text">COMPETENCIA</p></center><br>
+          <span class="services-text">Integraciones empresariales</span><br>
+          <span class="services-text">Prácticas restrictivas de la competencia</span><br>
+          <span class="services-text">Competencia desleal</span><br>
+          <span class="services-text">Abogacía de la competencia</span><br>
+          <span class="services-text">Medidas de defensa comercial</span>
+        </div>
+      </div>
     </div>
+
+    <!-- HEADER COMPONENT -->
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 footer-redes">
+          <span><a href="#"><img src="./img/thumbnail_in.png" class="img-redes"></a></span>
+          <span><a href="#"><img src="./img/thumbnail_tw.png" class="img-redes"></a></span>
+          <span><a href="#"><img src="./img/thumbnail_yt.png" class="img-redes"></a></span><br><br>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 footer-contact">
+          <span class="footer-contact-text">CONTÁCTENOS</span><br>
+          <span class="footer-contact-text">+57 315 928 3820</span><br>
+          <span class="footer-contact-text">+57 314 360 9883</span><br>
+          <span class="footer-contact-text"><a href="mailto:jplata@markup.com.co" style="color: white;">jplata@markup.com.co</a></span><br><br>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 footer-page-container">
+          <span class="footer-page">MARKUP.COM.CO ® 2018</span><br><br>
+        </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
