--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
           <span class="socio-text-contact">+57 315 928 3820</span>
         </div>
 
+        <!-- LINE COMPONENT -->
+        <div class="col-xs-12 col-sm-12 col-md-12 line-component-xs">
+          <br>
+          <div class="line-xs"></div>
+          <br>
+        </div>
+
         <!-- SOCIO COMPONENT -->
         <div class="col-xs-12 col-sm-12 col-md-6 socio-component-rodrigo">
           <p class="title-text">RODRIGO CASTELLANO</p>
@@ -90,35 +97,42 @@
       <!-- SERVICES COMPONENT -->
       <div class="row services-component">
         <div class="col-xs-12 col-sm-12 col-md-4 container-services">
-          <center><p class="title-text">ENERGÍA</p></center><br>
+          <center><p class="title-text">ENERGÍA</p></center>
           <span class="services-text">Asesoría regulatoria</span><br>
           <span class="services-text">Desarrollo de proyectos renovables</span><br>
-          <span class="services-text">Monitoreo de mercados</span>
+          <span class="services-text">Monitoreo de mercados</span><br><br>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 container-services">
-          <center><p class="title-text">FINANZAS</p></center><br>
+          <center><p class="title-text">FINANZAS</p></center>
           <span class="services-text">Evaluación de proyectos</span><br>
           <span class="services-text">Gestión de riesgos</span><br>
-          <span class="services-text">Gestión comercial</span>
+          <span class="services-text">Gestión comercial</span><br><br>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 container-services">
-          <center><p class="title-text">COMPETENCIA</p></center><br>
+          <center><p class="title-text">COMPETENCIA</p></center>
           <span class="services-text">Integraciones empresariales</span><br>
           <span class="services-text">Prácticas restrictivas de la competencia</span><br>
           <span class="services-text">Competencia desleal</span><br>
           <span class="services-text">Abogacía de la competencia</span><br>
-          <span class="services-text">Medidas de defensa comercial</span>
+          <span class="services-text">Medidas de defensa comercial</span><br><br>
         </div>
       </div>
     </div>
 
     <!-- HEADER COMPONENT -->
     <footer class="container-fluid">
+
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 container-top">
+          <span><a href="#"><img src="./img/thumbnail_top.png"></a></span>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 footer-redes">
-          <span><a href="#"><img src="./img/thumbnail_in.png" class="img-redes"></a></span>
-          <span><a href="#"><img src="./img/thumbnail_tw.png" class="img-redes"></a></span>
-          <span><a href="#"><img src="./img/thumbnail_yt.png" class="img-redes"></a></span><br><br>
+          <span><a href="https://co.linkedin.com/"><img src="./img/thumbnail_in.png" class="img-redes"></a></span>
+          <span><a href="https://twitter.com/?lang=es"><img src="./img/thumbnail_tw.png" class="img-redes"></a></span>
+          <span><a href="https://www.youtube.com/"><img src="./img/thumbnail_yt.png" class="img-redes"></a></span><br><br>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 footer-contact">
           <span class="footer-contact-text">CONTÁCTENOS</span><br>
@@ -135,6 +149,5 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./bootstrap/js/bootstrap.min.js" ></script>
-    <script src="./bootstrap/js/index.js" ></script>
   </body>
 </html>
