--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
     </header>
 
     <div class="markup-header">
-      
+      <div class="markup-header-opacity">
+        <div class="markup-header-text">
+          <p>
+            Encontrar una solución requiere más que unir dos puntos.<br>Respuestas sencillas a problemas complejos que logren resultados requiere considerar varios puntos de vista: un pensamiento sofisticado y en algunos momentos, no convencional.
+          </p>
+          <br class="jump-line">
+          <p>
+            En MarkUp Consultores le ofrecemos una asesoría integral con visión legal, económica y financiera para unir todos los puntos.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- CONTAINER COMPONENT -->
@@ -60,7 +70,7 @@
             Abogado Javeriano y del Estado de Nueva York. Maestría en Economía (Univ. Pompeu Fabra) y en Derecho (Univ. Georgetown) con enfoque enenergía y competencia.<br>Ex Superintendente Delegado para Energía y Gas.
           </p><br>
           <span class="socio-text-contact">jplata@markup.com.co</span><br>
-          <span class="socio-text-contact">+57 315 928 3820</span>
+          <!-- <span class="socio-text-contact">+57 315 928 3820</span> -->
         </div>
 
         <!-- LINE COMPONENT -->
@@ -72,13 +82,13 @@
 
         <!-- SOCIO COMPONENT -->
         <div class="col-xs-12 col-sm-12 col-md-6 socio-component-rodrigo">
-          <p class="title-text">RODRIGO CASTELLANO</p>
+          <p class="title-text">RODRIGO CASTELLANOS</p>
           <p class="socio-text-rol">SOCIO</p><br>
           <p class="socio-text-description">
             Ingeniero Industrial especialista en finanzas. Miembro de Junta Directiva de Seguros de vida Aurora S.A.<br>Ex Gerente de Derivex.
           </p><br>
           <span class="socio-text-contact">rcastellanos@markup.com.co</span><br>
-          <span class="socio-text-contact">+57 314 360 9883</span>
+          <!-- <span class="socio-text-contact">+57 314 360 9883</span> -->
         </div>
       </div>
 
@@ -119,7 +129,7 @@
       </div>
     </div>
 
-    <!-- HEADER COMPONENT -->
+    <!-- FOOTER COMPONENT -->
     <footer class="container-fluid">
 
       <div class="row">
@@ -138,7 +148,7 @@
           <span class="footer-contact-text">CONTÁCTENOS</span><br>
           <span class="footer-contact-text">+57 315 928 3820</span><br>
           <span class="footer-contact-text">+57 314 360 9883</span><br>
-          <span class="footer-contact-text"><a href="mailto:jplata@markup.com.co" style="color: white;">jplata@markup.com.co</a></span><br><br>
+          <span class="footer-contact-text"><a href="mailto:info@markup.com.co" style="color: white;">info@markup.com.co</a></span><br><br>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 footer-page-container">
           <span class="footer-page">MARKUP.COM.CO ® 2018</span><br><br>
