--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 footer-contact">
           <span class="footer-contact-text">CONTÁCTENOS</span><br>
-          <span class="footer-contact-text">+57 315 928 3820</span><br>
-          <span class="footer-contact-text">+57 314 360 9883</span><br>
+          <!-- <span class="footer-contact-text">+57 315 928 3820</span><br> -->
+          <!-- <span class="footer-contact-text">+57 314 360 9883</span><br> -->
           <span class="footer-contact-text"><a href="mailto:info@markup.com.co" style="color: white;">info@markup.com.co</a></span><br><br>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 footer-page-container">
