--- a/index.html
+++ b/index.html
@@ -12,16 +12,45 @@
     <title>MarkUp</title>
   </head>
   <body>
+    <div id="top" class="menu_show"></div>
 
     <!-- nav, logo, should be fixed and have links to another components(about, services) -->
-    <!-- <nav class="navbar markup-nav">
+    <nav id="menu" class="navbar navbar-expand-lg navbar-light bg-light sticky-top nav_hide">
       <a class="navbar-brand" href="#">
-        <img src="./img/logo1.png" alt="" class="markup-nav-logo">
+        <img src="./img/logo1.png" width="50" height="40" class="d-inline-block align-top" alt="">
       </a>
-    </nav> -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <!-- <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li> -->
+        </ul>
+      </div>
+    </nav>
 
     <!-- HEADER COMPONENT -->
-    <header>
+    <header id="header" class="header_show">
       <img src="./img/logo1.png" class="markup-header-logo">
     </header>
 
@@ -134,7 +163,7 @@
 
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 container-top">
-          <span><a href="#"><img src="./img/thumbnail_top.png"></a></span>
+          <img src="./img/thumbnail_top.png" id="img_top">
         </div>
       </div>
 
@@ -158,6 +187,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="./js/jquery.min.js" ></script>
     <script src="./bootstrap/js/bootstrap.min.js" ></script>
+    <script src="./scripts/script.js" ></script>
   </body>
 </html>
