[UPDATE]: adding pdf and bios extend

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <p>
             En MarkUp Consultores le ofrecemos una asesoría integral con visión legal, económica y financiera para unir todos los puntos.
           </p>
+          <a href="./assets/MARKUP BROCHURE.pdf" class="btn btn-outline-light btn-lg" target="_blank">Mas Información</a>
         </div>
       </div>
     </div>
@@ -95,11 +96,15 @@
         <div class="col-xs-12 col-sm-12 col-md-6 socio-component-jose">
           <p class="title-text">JOSÉ PLATA PUYANA</p>
           <p class="socio-text-rol">SOCIO</p><br>
-          <p class="socio-text-description">
-            Abogado Javeriano y del Estado de Nueva York. Maestría en Economía (Univ. Pompeu Fabra) y en Derecho (Univ. Georgetown) con enfoque enenergía y competencia.<br>Ex Superintendente Delegado para Energía y Gas.
-          </p><br>
+          <div class="socio-text-description-div">
+            <p class="socio-text-description">
+              Abogado de la Pontificia Universidad Javeriana y abogado del Estado de Nueva York. Máster en Economía de la Universidad Pompeu Fabra de Barcelona y Máster en Derecho de la Universidad de Georgetown. En su ejercicio profesional, se ha desempeñado en el sector público como Superintendente Delegado para Energía y Gas Combustible de la Superintendencia de Servicios Públicos y asesor del Superintendente de Industria y Comercio. Adicionalmente, fue asociado de las firmas de abogados Ibarra Ibarra Asociados, Brigard & Urrutia y Cavelier Abogados. Complementa su ejercicio profesional con la cátedra académica en las facultades de derecho de las Universidades Javeriana, Serbio Arboleda y Externado tanto en pregrado como en posgrado. Como Superintendente Delegado, el Doctor Plata hizo parte de la Comisión de Regulación de Energía y Gas en la cual aportaba la visión del Supervisor para validar la aplicabilidad de la regulación que se pretendía emitir, su posible impacto en la competencia de los mercados de electricidad, gas y GLP, así como la afectación en la viabilidad financiera de los prestadores.
+            </p>
+          </div>
+          <br>
           <span class="socio-text-contact">jplata@markup.com.co</span><br>
           <!-- <span class="socio-text-contact">+57 315 928 3820</span> -->
+          <a href="javascript:void(0);" class="see-more">Ver mas</a>
         </div>
 
         <!-- LINE COMPONENT -->
@@ -113,11 +118,15 @@
         <div class="col-xs-12 col-sm-12 col-md-6 socio-component-rodrigo">
           <p class="title-text">RODRIGO CASTELLANOS</p>
           <p class="socio-text-rol">SOCIO</p><br>
-          <p class="socio-text-description">
-            Ingeniero Industrial especialista en finanzas. Miembro de Junta Directiva de Seguros de vida Aurora S.A.<br>Ex Gerente de Derivex.
-          </p><br>
+          <div class="socio-text-description-div">
+            <p class="socio-text-description">
+              Ingeniero Industrial, especialista en finanzas y Ex asesor de la Superintendencia de Servicios Públicos Domiciliarios a cargo de liderar los proyectos en temas de monitoreo de mercados de energía eléctrica y gas combustible, de supervisión prudencial y de gestión de Riesgos para los mismos sectores. Con más de veinte años de experiencia en el sector financiero y ocho en el sector energético, durante los cuales ha desarrollado funciones directivas dentro de las que destaca la de Gerente General de DERIVEX S.A, el mercado de derivados de commodities energéticos, empresa de la Bolsa de Valores de Colombia y de XM Filial de ISA. Como Gerente era responsable del direccionamiento estratégico de la compañía, función que comprendía el direccionamiento de mercado, financiero, estratégico y operativo. Experto en mercados de capitales producto de haber participado de la negociación de activos financieros durante mas de diez años y en mercados eléctricos, tema sobre el cual dicta el seminario Mercados Financieros de Electricidad en la Universidad Externado de Colombia. En la actualidad es miembro de la Junta Directiva de la compañía de Seguros de Vida Aurora S.A.
+            </p>
+          </div>
+          <br>
           <span class="socio-text-contact">rcastellanos@markup.com.co</span><br>
           <!-- <span class="socio-text-contact">+57 314 360 9883</span> -->
+          <a href="javascript:void(0);" class="see-more">Ver mas</a>
         </div>
       </div>
 
